--- a/example/auto_compression/image_classification/configs/MobileNetV3_large_x1_0/qat_dis.yaml
+++ b/example/auto_compression/image_classification/configs/MobileNetV3_large_x1_0/qat_dis.yaml
@@ -1,16 +1,14 @@
 Global:
   input_name: inputs
-  model_dir: MobileNetV3_large_x1_0_infer
+  model_dir: MobileNetV3_large_x1_0_ssld_infer
   model_filename: inference.pdmodel
   params_filename: inference.pdiparams
-  batch_size: 32
+  batch_size: 128
   data_dir: ./ILSVRC2012
 
 Distillation:
   alpha: 1.0
-  loss: l2
-  node:
-  - softmax_0.tmp_0
+  loss: soft_label
 Quantization:
   use_pact: true
   activation_bits: 8
@@ -22,15 +20,14 @@ Quantization:
   quantize_op_types:
   - conv2d
   - depthwise_conv2d
+  - matmul
   weight_bits: 8
 TrainConfig:
-  epochs: 1
-  eval_iter: 500
-  learning_rate: 
-    type: CosineAnnealingDecay 
-    learning_rate: 0.015
+  epochs: 2
+  eval_iter: 5000
+  learning_rate: 0.001
   optimizer_builder:
     optimizer:
       type: Momentum
     weight_decay: 0.00002
-  origin_metric: 0.7532
+  origin_metric: 0.7896
