--- a/example/auto_compression/detection/configs/ppyoloe_s_qat_dis.yaml
+++ b/example/auto_compression/detection/configs/ppyoloe_s_qat_dis.yaml
@@ -1,10 +1,10 @@
 
 Global:
   reader_config: configs/yolo_reader.yml
-  input_list: ['image', 'scale_factor']
-  arch: YOLO
+  input_list: ['image']
+  arch: PPYOLOE    # When export exclude_nms=True, need set arch: PPYOLOE
   Evaluation: True
-  model_dir: ./ppyoloe_crn_l_300e_coco
+  model_dir: ./ppyoloe_crn_s_300e_coco
   model_filename: model.pdmodel
   params_filename: model.pdiparams
 
