--- a/example/auto_compression/pytorch_yolov5/configs/yolov5s_qat_dis.yaml
+++ b/example/auto_compression/pytorch_yolov5/configs/yolov5s_qat_dis.yaml
@@ -14,7 +14,7 @@ Distillation:
 
 Quantization:
   use_pact: true
-  onnx_format: True
+  onnx_format: False
   activation_quantize_type: 'moving_average_abs_max'
   quantize_op_types:
   - conv2d
