--- a/example/auto_compression/pytorch_yolov6/configs/yolov6s_qat_dis.yaml
+++ b/example/auto_compression/pytorch_yolov6/configs/yolov6s_qat_dis.yaml
@@ -13,6 +13,7 @@ Distillation:
   loss: soft_label
 
 Quantization:
+  onnx_format: true
   activation_quantize_type: 'moving_average_abs_max'
   quantize_op_types:
   - conv2d
