Use fixed-shape models for automatic strategy selection.

--- a/example/auto_compression/semantic_segmentation/configs/pp_humanseg/pp_humanseg_auto.yaml
+++ b/example/auto_compression/semantic_segmentation/configs/pp_humanseg/pp_humanseg_auto.yaml
@@ -4,6 +4,7 @@ Global:
   model_filename: model.pdmodel
   params_filename: model.pdiparams
   deploy_hardware: SD710
+  input_shapes: [1,3,398,224,224]
 
 TrainConfig:
   epochs: 14
