--- a/example/auto_compression/image_classification/configs/MobileNetV3_large_x1_0/qat_dis.yaml
+++ b/example/auto_compression/image_classification/configs/MobileNetV3_large_x1_0/qat_dis.yaml
@@ -9,10 +9,12 @@ Global:
 Distillation:
   alpha: 1.0
   loss: soft_label
+
 Quantization:
   use_pact: true
   activation_bits: 8
   is_full_quantize: false
+  onnx_format: True
   activation_quantize_type: moving_average_abs_max
   weight_quantize_type: channel_wise_abs_max
   not_quant_pattern:
@@ -22,6 +24,7 @@ Quantization:
   - depthwise_conv2d
   - matmul
   weight_bits: 8
+
 TrainConfig:
   epochs: 2
   eval_iter: 5000
